# auto-ppt-prototype

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.en.md  EXAMPLES.ja.md  EXAMPLES.zh-CN.md  GITHUB_SETUP.md  INTEGRATION_GUIDE.en.md  INTEGRATION_GUIDE.ja.md  INTEGRATION_GUIDE.zh-CN.md  PRODUCT.en.md  PRODUCT.ja.md  PRODUCT.zh-CN.md  PUBLISH_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  RELEASE_DRAFT_v0.2.0.md  RELEASE_DRAFT_v0.3.0.md  ROADMAP.md  SECURITY.md  SKILL.md  USER_GUIDE.en.md  USER_GUIDE.ja.md  USER_GUIDE.zh-CN.md  agent-skill.js  auto-ppt  auto_ppt_cli.py  deck-agent-core.js  deck-schema.json  generate-from-prompt.js  generate-ppt.js  package-lock.json  package.json  py-skill-server.py  pyproject.toml  revise-deck.js  sample-agent-request.json  sample-agent-revise-request.json  sample-deck-brief.json  (+6 more)
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
compat/: agent-skill.js  generate-from-prompt.js  revise-deck.js  skill-server.js
docs/: EXAMPLES.en.md  EXAMPLES.ja.md  EXAMPLES.zh-CN.md  INTEGRATION_GUIDE.en.md  INTEGRATION_GUIDE.ja.md  INTEGRATION_GUIDE.zh-CN.md  PRODUCT.en.md  PRODUCT.ja.md  PRODUCT.zh-CN.md  README.md  REPOSITORY_MAP.md  USER_GUIDE.en.md  USER_GUIDE.ja.md  USER_GUIDE.zh-CN.md
output/: py-generated-deck.pptx
python_backend/: llm_provider.py  pptx_renderer.py  quality_scorer.py  skill_api.py  smart_layer.py  source_loader.py  visual_qa.py
quality_samples/: README.md  manifest.json
scripts/: gen-social-preview.py  run-smoke.js
tests/: test_auto_ppt_cli.py  test_coverage_boost.py  test_mcp_integration.py  test_mcp_server.py  test_quality_samples.py  (+2 more)
(+28 files in other folders)
